# rust-test

./: Cargo.toml  README.md
docs/: memory.md  tips.md
src/: 2_2.rs  2_4.rs  2_5.rs  2_6.rs  _main.rs  lib.rs  main.rs
