[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.5.1"
mime = "0.2.3"
router = "0.5.1"
urlencoded = "0.6.0"
num = "0.1.27"
image = "0.13.0"
crossbeam = "0.2.8"

[[bin]]
name = "2_2"
path = "src/2_2.rs"

[[bin]]
name = "2_4"
path = "src/2_4.rs"

[[bin]]
name = "2_6"
path = "src/2_6.rs"
